syntax = "proto3";

option go_package = "github.com/evrblk/monstera-example/tinyurl/corepb";

package com.evrblk.monstera_example.tinyurl.corepb;

message GetUserRequest {
  uint32 user_id = 1;
}
message GetUserResponse {
  User user = 1;
}

message CreateUserRequest {
  uint32 user_id = 1;
  int64 now = 2;
}

message CreateUserResponse {
  User user = 1;
}

message GetShortUrlRequest {
  ShortUrlId short_url_id = 1;
}

message GetShortUrlResponse {
  ShortUrl short_url = 1;
}

message ListShortUrlsRequest {
  uint32 user_id = 1;
}

message ListShortUrlsResponse {
  repeated ShortUrl short_urls = 1;
}

message CreateShortUrlRequest {
  ShortUrlId short_url_id = 1;
  string full_url = 2;
  int64 now = 3;
}

message CreateShortUrlResponse {
  ShortUrl short_url = 1;
}

message ShortUrl {
  ShortUrlId id = 1;
  string full_url = 2;
  int64 created_at = 3;
}

message ShortUrlId {
  uint32 user_id = 1;
  uint32 short_url_id = 2;
}

message User {
  uint32 id = 1;
  int64 created_at = 2;
  int64 updated_at = 3;
}
